fixed the navigation links, changed the z-index from 1 to -1

--- a/styles.css
+++ b/styles.css
@@ -120,9 +120,8 @@ li{
     top: 0;
     width: 100%;
     height:100vh;
-    z-index: 1;
+    z-index: -1;
     padding: 250px 0 50px;
-
 }
 
 .home .home-info{
